@@ -5,13 +5,14 @@ import java.util.List;
 
 public class LargestNumberInAList {
     public static int largestInAList(List<Integer> nums) {
-        if (nums.size() == 1) return nums.get(0);
-        int first = nums.getFirst();
-        List<Integer> remaining = new ArrayList<>(nums.subList(1, nums.size()));
-        int largestInList = largestInAList(remaining);
+        if (nums.size() == 1) return nums.getFirst();
 
-        if (largestInList > first) {
-            return largestInList;
+        int first = nums.getFirst();
+        List<Integer> remaining = nums.subList(1, nums.size());
+        int largest = largestInAList(remaining);
+
+        if (largest > first) {
+            return largest;
         } else {
             return first;
         }
